--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "dayjs": "^1.11.18",
     "firebase": "^12.4.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
