--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.13.1",
     "dayjs": "^1.11.18",
     "firebase": "^12.4.0",
+    "mammoth": "^1.11.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
