--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
+    "@mui/material": "^7.3.5",
+    "@mui/x-date-pickers": "^8.18.0",
     "@supabase/supabase-js": "^2.79.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "cloudinary": "^2.8.0",
-    "dayjs": "^1.11.18",
+    "dayjs": "^1.11.19",
     "firebase": "^12.4.0",
     "mammoth": "^1.11.0",
     "react": "^19.1.1",
