create update manager edit category sports

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cloudinary": "^2.8.0",
     "dayjs": "^1.11.19",
     "firebase": "^12.4.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.0",
     "mammoth": "^1.11.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
