--- a/firebase.json
+++ b/firebase.json
@@ -11,14 +11,12 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ],
       "source": "functions"
     },
     {
-      "source": "functions_src",
-      "codebase": "functions",
+      "codebase": "lock",
       "disallowLegacyRuntimeConfig": true,
       "ignore": [
         "node_modules",
@@ -28,9 +26,9 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
         "npm --prefix \"$RESOURCE_DIR\" run build"
-      ]
+      ],
+      "source": "lock"
     }
   ]
 }
